...

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/labelName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/labelNameError"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/labelLastName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextLastName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/labelLastNameError"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/labelEmail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/labelEmailError"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/labelPassword"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/editTextPassword"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/labelPasswordError"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/labelRepeatPassword"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextRepeatPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/labelRepeatPasswordError"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <CheckBox
                                android:id="@+id/checkBoxTerms"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
...

                        <TextView
                            android:id="@+id/labelTermsError"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...
