<resources>
    <string name="app_name">ABC-Jobs_Alpaca</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuraciones</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="userRegisteredLabelButton">Ya tengo cuenta en ABC</string>
    <string name="userUnRegisteredLabelButton">Registrarse</string>
    <string name="question_register_type_text">Como quieres registrarte?:</string>
    <string name="candidato_text">Candidato</string>
    <string name="empresa_text">Empresa Contratante</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="candidatos_text_apptopbar">Registro de candidatos</string>
    <string name="languageCurrent">Lenguaje seleccionado</string>
    <string name="home_fragment_text">Hola</string>
    <string name="succesful_message_login">Inicio de sesión correcto</string>
    <string name="email_address_header">Correo Electrónico</string>
    <string name="email_address_placeholder">Ingrese su correo electrónico</string>
    <string name="password_header">Contraseña</string>
    <string name="password_placeholder">Ingrese la contraseña</string>
    <string name="login_button_text">Iniciar sesión</string>
    <string name="register_button_text">Registrarse</string>
    <string name="names_label">Nombres</string>
    <string name="names_placeholder">Ingrese su nombre</string>
    <string name="latnames_label">Apellidos</string>
    <string name="lastnames_placeholder">Ingrese su apellido</string>
    <string name="repass_label">Repita la contraseña</string>
    <string name="repas_placeholder">Repita la contraseña</string>
    <string name="acept_terms">Acepto los</string>
    <string name="terms_cond">términos y condiciones</string>
    <string name="now_date">Fecha actual:</string>
    <string name="now_hour">Hora actual:</string>
    <string name="save_preferences_button">Guardar</string>
    <string name="succesful_message">Operación exitosa</string>
    <string name="lastnames_label">Apellidos</string>
    <string name="repass_placeholder">Repita su contraseña</string>
    <string name="accept_terms">Acepto los</string>
    <string name="name_validation_error">Debe tener entre 2 y 100 caracteres y no puede estar vacío.</string>
    <string name="lastnames_validation_error">Debe tener entre 2 y 100 caracteres y no puede estar vacío.</string>
    <string name="email_validation_error">El correo electrónico no es válido. (ej: nombre@dominio.com).</string>
    <string name="password_validation_error">La contraseña debe tener entre 8 y 255 caracteres.</string>
    <string name="no_same_passwords">Las contraseñas no coinciden.</string>
    <string name="term_cond_validation_error">Debe aceptar los términos y condiciones.</string>
    <string name="succesful_toast_message">Cuenta creada exitosamente</string>
    <string name="toast_message_successful">Cuenta creada exitosamente</string>
    <string name="toast_message_network_error">Error de red</string>
    <string name="toast_message_generic_error">Error en la solicitud</string>
    <string name="toast_message_registration_failed">No se logró completar el registro, Email registrado</string>
    <string name="toast_message_data_not_found">Sin registros</string>
    <string name="network_error">Error de red: %s</string>
    <string name="successful_toast_message">Cuenta creada exitosamente</string>
    <string name="successful_login_toast_message">Inicio de sesión exitoso</string>
    <string name="toast_message_login_failed">Inicio de sesión fallido, Correo electrónico no registrado</string>
    <string name="cancel_preferences_button">Cancelar</string>
    <string name="menu_academic_info">Información académica</string>
    <string name="menu_personal_info">Información personal</string>
    <string name="preferencias_del_sistema">Preferencias del sistema</string>
    <string name="create_academic_info_title">Crear formación académica</string>
    <string name="no_personal_info">El usuario no cuenta con datos de Información personal, los puede agregar usando el botón de la esquina inferior derecha</string>
    <string name="full_name_header">Nombre Completo</string>
    <string name="full_name_placeholder">Nombres y Apellidos</string>
    <string name="city_header">Ciudad de residencia</string>
    <string name="city_placeholder">Ingresar ciudad</string>
    <string name="address_header">Dirección de residencia</string>
    <string name="address_placeholder">Ingresar dirección</string>
    <string name="phone_header">Teléfono</string>
    <string name="phone_placeholder">Ingresar teléfono</string>
    <string name="bio_header">Biografía</string>
    <string name="bio_placeholder">Ingresar biografía</string>
    <string name="save_personal_info">Aceptar</string>
    <string name="birthday_header">Fecha de nacimiento</string>
    <string name="birthday_placeholder">01/01/1990</string>
    <string name="country_header">País de Residencia</string>
    <string name="languages_header">Idiomas</string>
    <string name="title_dialog">Confirmación</string>
    <string name="question_dialog">¿Está seguro que desea confirmar la acción?</string>
    <string name="cancel_message">Cancelar</string>
    <string name="confirm_message">Aceptar</string>
    <string name="type_degree_error_message">Se debe elegir un tipo de formación</string>
    <string name="date_error_message">La fecha de inicio debe ser menor a la fecha de fin</string>
    <string name="create_technical_info_title">Crear información técnica</string>
    <string name="create_work_info_title">Crear información laboral</string>
    <string name="context_error_message">El contexto debe implementar las interfaces necesarias.</string>
    <string name="degree_label">Título Obtenido</string>
    <string name="degree_placeholder">Ingrese su grado académico</string>
    <string name="degree_type_label">Nivel de Estudios</string>
    <string name="degree_type_spinner">Nivel de Estudios</string>
    <string name="institution_label">Institución Educativa</string>
    <string name="institution_placeholder">Ingrese la institución educativa</string>
    <string name="start_date_label">Fecha de inicio</string>
    <string name="start_date_placeholder">Año de inicio</string>
    <string name="studies_finished_checkbox">¿Culminó los estudios?</string>
    <string name="end_date_label">Fecha fin de estudio</string>
    <string name="end_date_placeholder">Año de fin de estudios</string>
    <string name="extra_info_label">Información Adicional</string>
    <string name="extra_info_placeholder">Información Adicional</string>
    <string name="technical_info_label">Conocimiento técnico</string>
    <string name="technical_info_placeholder">Conocimiento técnico</string>
    <string name="level_technical_knowledge_label">Nivel de conocimiento</string>
    <string name="extra_info_technical_label">Información Adicional</string>
    <string name="extra_info_tecnical_placeholder">Información Adicional</string>
    <string name="role_label">Cargo</string>
    <string name="role_placeholder">Ingrese su cargo</string>
    <string name="company_label">Empresa</string>
    <string name="company_placeholder">Ingrese la empresa</string>
    <string name="job_checkbox">¿Dejo de trabajar ahí?</string>
    <string name="select_element_label">Selecciona un elemento</string>
    <string name="description_label">Descripción</string>
    <string name="description_placeholder">Ingrese la descripción de sus actividades</string>
    <string name="skills_label">Habilidades</string>
    <string name="technical_info_title">Información técnica</string>
    <string name="work_info_title">Información laboral</string>
    <string name="city_validation_error">Ciudad debe tener entre 5 y 255 caracteres.</string>
    <string name="address_validation_error">Dirección debe tener entre 5 y 255 caracteres.</string>
    <string name="phone_validation_error">Teléfono debe tener entre 2 y 15 caracteres.</string>
    <string name="bio_validation_error">Biografía debe tener entre 10 y 255 caracteres.</string>
    <string name="birthdate_validation_error">Debe ingresar una fecha válida y su edad debe ser mayor a 18 años.</string>
    <string name="exam_list_title">Exámenes</string>
    <string name="rating_label">Nivel de conocimiento</string>
    <string name="option1_label">Opción 1</string>
    <string name="question_label">Pregunta</string>
    <string name="leave_button_label">Abandonar</string>
    <string name="option2_label">Opción 2</string>
    <string name="option3_label">Opción 3</string>
    <string name="option4_label">Opción 4</string>
    <string name="submit_button_label">Enviar</string>
    <string name="take_exam_title">Tomar examen</string>
    <string name="vacancies">Vacantes</string>
    <string name="menu_vacancy">Vacantes</string>
    <string name="shortlisted_candidates">Candidatos preseleccionados</string>
    <string name="shortlisted_placeholder_result">resultado</string>
    <string name="shortlisted_placeholder_name">nombre</string>
    <string name="shortlisted_placeholder_location">ubicacion</string>
    <string name="shortlisted_placeholder_value" translatable="false">100%</string>
    <string name="shortlisted_label_evaluated">Evaluado</string>
    <string name="shortlisted_label_pending">Pendiente</string>
    <string name="vacancy_placeholder_name">vacante</string>
    <string name="vacancy_placeholder_description">descripción</string>
    <string name="vacancy_placeholder_team">equipo</string>
    <string name="technical_proof_label">Registrar resultado prueba</string>
    <string name="technical_proof_result_placeholder">Ingrese el porcentaje</string>
    <string name="technical_proof_result_instructions">Resultado de la prueba técnica (0 - 100%)</string>
    <string name="technical_proof_name_placeholder">Nombre</string>
    <string name="technical_proof_location_placeholder">Localización no definida</string>
    <string name="technical_proof_saved">Guardado exitosamente</string>
    <string name="interview_list_title">Entrevistas</string>
    <string name="exams_title">Lista de exámenes</string>
    <string name="exam_title">Tomar examen</string>
    <string name="result_interview_label">Resultado:</string>
    <string name="state_label">Estado:</string>
    <string name="vacancy_label">Vacante:</string>
    <string name="hour_label">Hora:</string>
    <string name="pending_message">Pendiente</string>
    <string name="completed_message">Completado</string>
    <string name="noresults_messages">No registra resultados</string>
    <string name="team_list_title">Equipos</string>
    <string name="technical_proof_error_result_null">Debe ingresar un valor numérico entre 1 y 100</string>
    <string name="select_button_label">Seleccionar candidato</string>
    <string name="employee_label_pending">Pendiente</string>
    <string name="employee_label_evaluated">Evaluado</string>
    <string name="employee_list_title">Empleados contratados</string>
    <string name="hired_employee_list_title">Empleados contratados</string>
    <string name="performance_result_instructions">Desempeño</string>
    <string name="date_evaluation_placeholder">Sin fecha disponible\n</string>
    <string name="performance_employee_title">Registrar desempeño</string>
    <string name="result_validation_message">Se debe ingresar valores entre 0 y 100</string>
</resources>