<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.RegisterTypeFragment">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/dialog_register_type"
                    android:layout_width="258dp"
                    android:layout_height="241dp"
                    android:background="@drawable/rounded_layout_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/register_type_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="24dp"
                        android:text="@string/question_register_type_text"
                        android:textAlignment="center"
                        android:textColor="@color/accent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_user_register_candidate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/button_rounded"
                        android:fontFamily="@font/font_roboto"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/candidato_text" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_welcome_register_enterprise"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/button_rounded"
                        android:fontFamily="@font/font_roboto"
                        android:text="@string/empresa_text" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>