...
                    android:layout_marginTop="40dp"
                    android:background="@drawable/button_rounded"
                    android:fontFamily="@font/font_roboto"
                    android:text="@string/userRegisteredLabelButton" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_welcome_unregistered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_rounded"
                    android:fontFamily="@font/font_roboto"
...
